[tool.poetry]
name = "obs.notify"
version = "0.1.0"
description = "Web-приложения self-hosted для реализации уведомлений в OBS "
authors = ["Kirssei"]
readme = "README.md"
packages = [{ include = "kirssei" }]

package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "4.2.7"
pillow = "11.1.0"
ruff = "0.13.0"
python-dotenv = "1.0.0"
django-split-settings = "1.3.2"
channels = "4.3.1"
channels-redis = "4.3.0"
"gunicorn" = "23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"